--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,15 @@
         android:id="@+id/download_button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Play"
+        android:id="@+id/play_button"
+        android:layout_above="@+id/download_button"
+        android:layout_centerHorizontal="true" />
+
+
 </RelativeLayout>
